--- a/package.json
+++ b/package.json
@@ -21,19 +21,22 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "react-zoom-pan-pinch": "^2.1.3",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
+    "styled-components": "^5.3.5",
     "truffle": "^5.5.10",
+    "truffle-build": "file:./truffle/build",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.3",
-    "truffle-build": "file:./truffle/build" 
+    "web3": "^1.7.3"
   },
   "scripts": {
     "start": "react-app-rewired start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy-production": "react-app-rewired build && scp -r ./build/* root@164.92.155.11:/var/www/dapp.safepix.io/html"
   },
   "eslintConfig": {
     "extends": [
